--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,18 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace 'com.spacycoder.flutter_exif_plugin'
     compileSdkVersion 33
+
+    def javaVersion = JavaVersion.VERSION_17
+    compileOptions {
+        sourceCompatibility javaVersion
+        targetCompatibility javaVersion
+    }
+
+    kotlinOptions {
+        jvmTarget = javaVersion.toString()
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
